--- a/Osudpotro Clone/css/style.css
+++ b/Osudpotro Clone/css/style.css
@@ -239,21 +239,30 @@ margin-left: 50px;
   }
   
   .btn {
-    color: #ffffff;
-    padding: 0.8rem;
+    color: white;
+    padding: 10px;
     font-size: 14px;
     text-transform: uppercase;
-    border-radius: 4px;
+    border-radius: 24px;
     font-weight: 400;
     display: block;
-    width: 100%;
-    cursor: pointer;
+    /*width: 100%;
+    */cursor: pointer;
     border: 1px solid rgba(255, 255, 255, 0.2);
-    background: transparent;
-  }
+    background: #ee1c25;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    -ms-border-radius: 24px;
+    -o-border-radius: 24px;
+}
   
+  .btnDiv{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
   .btn:hover {
-    background-color: rgba(255, 255, 255, 0.12);
+    background-color: #d5101a ;
   }
   
   .cards {
@@ -286,22 +295,24 @@ margin-left: 50px;
     border-radius: 0.25rem;
     box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     overflow: hidden;
   }
   
   .card_content {
-    padding: 1rem;
-    background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
+    padding: 18px;
+    /* background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%); */
   }
   
   .card_title {
-    color: #ffffff;
+    color: #EE1C25;
+
     font-size: 1.1rem;
     font-weight: 700;
     letter-spacing: 1px;
     text-transform: capitalize;
     margin: 0px;
+    text-align: center;
   }
   
   .card_text {
@@ -372,6 +383,9 @@ margin-left: 50px;
       overflow-y: auto;
     }
 
+
+
+    
    
 
 
