--- a/Osudpotro Clone/css/style.css
+++ b/Osudpotro Clone/css/style.css
@@ -194,7 +194,79 @@ margin-left: 50px;
 
 
   /* banner Section  */
+  .mySlides {display: none}
+  img {vertical-align: middle;}
+  
+  /* Slideshow container */
+  .slideshow-container {
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Next & previous buttons */
+ 
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
 
+
+  .dotDiv{
+
+    position: relative;
+    margin-top: -59px;
+    text-align: center;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+   
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  /* @media only screen and (max-width: 600px) {
+    .prev, .next,.text {font-size: 11px}
+  } */
 
   .banner-class {
 
@@ -331,7 +403,9 @@ margin-left: 50px;
 
 
 
-
+  .mobile-nav{
+display: none;
+  }
 
 
 
@@ -339,8 +413,22 @@ margin-left: 50px;
 
 
   @media (max-width:600px) {
+
+    .logoNav{
+
+      display: none;
+    }
+
+    .nav {
+
+      background-color: #45bdaa;
+
+    }
     .nav > .nav-btn {
-      display: inline-block;
+      /* display: inline-block; */
+
+      display: flex;
+      align-items: center;
       position: absolute;
       right: 0px;
       top: 0px;
@@ -358,7 +446,7 @@ margin-left: 50px;
       display: block;
       width: 25px;
       height: 10px;
-      border-top: 2px solid #eee;
+      border-top: 5px solid white;
     }
     .nav > .nav-links {
       position: absolute;
@@ -379,16 +467,51 @@ margin-left: 50px;
       height: 0px;
     }
     .nav > #nav-check:checked ~ .nav-links {
-      height: calc(100vh - 50px);
+      height: fit-content;
+      /* height: calc(100vh - 50px); */
       overflow-y: auto;
+      z-index: 9999999;
     }
 
 
+.nav-title{
+
+
+}
+
+
+.icon-div{
+
+  display: flex;
+}
+
+
+.mobile-nav{
+display: inline-block;
+max-width: 126px;
+margin-left: -212px;
+}
 
     
-   
+    
+    
+    .prev, .next,.text {font-size: 11px}
 
 
+    .dotDiv{ 
+
+      margin-top: -50px;
+    }
+
+.slideshow-container{
+
+top: 78px;
+
+  width: 100%;
+    position: relative;
+    overflow: hidden;
+    background-color: #005e6a;
+}
     .dropbtn {
         background-color: #333!important;
     }
