--- a/Osudpotro Clone/css/style.css
+++ b/Osudpotro Clone/css/style.css
@@ -1,518 +1,702 @@
-html, body{
+html,
+body {
 
-    
 
-    font-family: 'Poppins', sans-serif;
-    background-color: #f3f7fb;
-    margin: 0;
+
+  font-family: 'Poppins', sans-serif;
+  background-color: #f3f7fb;
+  margin: 0;
 }
 
 
 
 * {
-    box-sizing: border-box;
-  }
-  
- 
+  box-sizing: border-box;
+}
 
 
 
- 
 
-  .logoNav{ 
 
-    display: grid;
+
+
+.logoNav {
+
+  display: grid;
   grid-template-columns: 1fr 2fr 2fr;
 
-   background-color: #f3f7fb;
-
-   
-  }
+  background-color: #f3f7fb;
 
 
-  .nav-title{
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    margin-bottom: 20px;
-  }
-
-  .search{
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .SearchIcon {
-    margin-left: 26px;
-    position: absolute;
-    margin-top: -8px;
-}
-  .inputFiled {
-    
-    padding: 10px 10px 10px 50px;
-    background-color: #fff;
-    border-radius: 40px;
-    width: 450px;
-    outline-width: 0;
-    font-size: 14px;
-    border: 1px solid #efefef;
-    line-height: 1.6;
-    
 }
 
 
-.logoSection{ 
+.nav-title {
 
-display: flex;
-align-items: center;
-/* justify-content: end !important; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-   
+  margin-bottom: 20px;
+}
+
+.search {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search1 {
+  display: none;
+}
+
+.SearchIcon {
+  margin-left: 26px;
+  position: absolute;
+  margin-top: -8px;
+}
+
+.inputFiled {
+
+  padding: 10px 10px 10px 50px;
+  background-color: #fff;
+  border-radius: 40px;
+  width: 450px;
+  outline-width: 0;
+  font-size: 14px;
+  border: 1px solid #efefef;
+  line-height: 1.6;
+
+}
+
+
+.logoSection {
+
+  display: flex;
+  align-items: center;
+  /* justify-content: end !important; */
+
+
 }
 
 .Icon-inlinging {
 
-    display: flex;
-    flex-direction: row;
-    text-decoration: none;
-    padding: 2px;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  padding: 2px;
 
 }
 
-.text-icon{
+.text-icon {
 
-    padding-left: 9px;
-    margin-right:  10px;
+  padding-left: 9px;
+  margin-right: 10px;
 }
 
 .hr-bar {
-margin-left: 50px;
-   border-left: 3px solid gray; 
-   padding-left: 30px;
+  margin-left: 50px;
+  border-left: 3px solid gray;
+  padding-left: 30px;
 }
 
+
+.nav {
+  height: 50px;
+  width: 100%;
+  background: linear-gradient(#45bdaa, transparent);
+  background-color: #005e6a;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-header {
+  display: inline;
+  margin-top: 20px;
+}
+
+.nav>.nav-header>.nav-title {
+  display: inline-block;
+  font-size: 22px;
+  color: #fff;
+  padding: 10px 10px 10px 10px;
+
+  float: right;
+}
+
+.nav>.nav-btn {
+  display: none;
+}
+
+.nav>.nav-links {
+  display: inline;
+  float: left;
+  font-size: 13px;
+}
+
+.nav>.nav-links>a {
+  display: inline-block;
+  padding: 13px 10px 13px 10px;
+  text-decoration: none;
+  color: #efefef;
+}
+
+.nav>.nav-links>a:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.nav>#nav-check {
+  display: none;
+}
+
+.dropbtn {
+  /* background-color: #04AA6D; */
+
+  background: linear-gradient(#45bdaa, transparent);
+  background-color: #005e6a;
+  color: #efefef;
+  padding: 16px;
+  font-size: 13px;
+  border: none;
+}
+
+
+
+
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background: linear-gradient(#45bdaa, transparent);
+  background-color: #005e6a;
+  min-width: 160px;
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0); */
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* .dropdown:hover .dropbtn {background-color: rgba(0, 0, 0, 0.3);} */
+
+
+
+
+/* banner Section  */
+.mySlides {
+  display: none
+}
+
+img {
+  vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+
+.dotDiv {
+
+  position: relative;
+  margin-top: -59px;
+  text-align: center;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
+/* On smaller screens, decrease text size */
+/* @media only screen and (max-width: 600px) {
+    .prev, .next,.text {font-size: 11px}
+  } */
+
+.banner-class {
+
+
+  background-color: #fff;
+
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+
+}
+
+.bannaer-text {
+  padding-bottom: 25px;
+  text-align: center;
+  color: #666;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 0 auto 30px;
+  padding: 20px 0;
+  font-weight: 400;
+}
+
+
+
+/* card desingn  */
+
+.main {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-size: 24px;
+  font-weight: 400;
+  text-align: center;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.btn {
+  color: white;
+  padding: 10px;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 24px;
+  font-weight: 400;
+  display: block;
+  /*width: 100%;
+    */
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: #ee1c25;
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+  -ms-border-radius: 24px;
+  -o-border-radius: 24px;
+}
+
+.btnDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn:hover {
+  background-color: #d5101a;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cards_item {
+  display: flex;
+  padding: 1rem;
+}
+
+@media (min-width: 40rem) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 56rem) {
+  .cards_item {
+    width: 33.3333%;
+  }
+}
+
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  /* flex-direction: column; */
+  overflow: hidden;
+}
+
+.card_content {
+  padding: 18px;
+  /* background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%); */
+}
+
+.card_title {
+  color: #EE1C25;
+
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin: 0px;
+  text-align: center;
+}
+
+.card_text {
+  color: #ffffff;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+  font-weight: 400;
+}
+
+.made_by {
+  font-weight: 400;
+  font-size: 13px;
+  margin-top: 35px;
+  text-align: center;
+}
+
+
+
+.mobile-nav {
+  display: none;
+}
+
+/* <!-- Shop By Category section Start --> */
+
+/*  SECTIONS  */
+
+.section-head-text{
+
+  font-weight: bolder;
   
+}
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 15px;
+  
+}
+
+/*  COLUMN SETUP  */
+.col {
+  display: block;
+  float:left;
+  margin: 1% 0 1% 1.6%;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  /* -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px; */
+}
+
+
+.section-img{
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  
+}
+.section-text {
+
+  text-align: center;
+  font-weight: bold;
+  font-size: medium;
+  height: 40px;
+
+}
+
+
+.col:first-child { margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+/*  GRID OF EIGHT  */
+.span_8_of_8 {
+	width: 100%;
+}
+
+.span_7_of_8 {
+  	width: 87.3%;
+}
+
+.span_6_of_8 {
+  	width: 74.6%;
+}
+
+.span_5_of_8 {
+  	width: 61.9%;
+}
+
+.span_4_of_8 {
+  	width: 49.2%;
+}
+
+.span_3_of_8 {
+  	width: 36.5%;
+}
+
+.span_2_of_8 {
+  	width: 23.8%;
+}
+
+.span_1_of_8 {
+  	width: 11.1%;
+}
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+
+
+
+@media (max-width:600px) {
+
+  .logoNav {
+
+    display: none;
+  }
+
   .nav {
+
+    background-color: #45bdaa;
+    z-index: 99999999;
+  }
+
+  .nav>.nav-btn {
+    /* display: inline-block; */
+
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+  }
+
+  .nav>.nav-btn>label {
+    display: inline-block;
+    width: 50px;
     height: 50px;
+    padding: 13px;
+  }
+
+  .nav>.nav-btn>label:hover,
+  .nav #nav-check:checked~.nav-btn>label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .nav>.nav-btn>label>span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 5px solid white;
+  }
+
+  .nav>.nav-links {
+    position: absolute;
+    display: block;
     width: 100%;
-    background: linear-gradient(#45bdaa,transparent);
-    background-color: #005e6a;
-    position: relative;
+    background-color: #333;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: 0px;
+  }
+
+  .nav>.nav-links>a {
+    display: block;
+    width: 100%;
+  }
+
+  .nav>#nav-check:not(:checked)~.nav-links {
+    height: 0px;
+  }
+
+  .nav>#nav-check:checked~.nav-links {
+    height: fit-content;
+    /* height: calc(100vh - 50px); */
+    overflow-y: auto;
+    z-index: 9999999;
+  }
+
+
+
+
+
+  .icon-div {
+
+    display: flex;
+  }
+
+
+  .mobile-nav {
+    display: inline-block;
+    max-width: 123px;
+    margin-left: -165px;
+  }
+
+  .search1 {
+
+    background-color: #45bdaa;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  
-  .nav-header {
-    display: inline;
-    margin-top: 20px;
-  }
-  
-  .nav > .nav-header > .nav-title {
-    display: inline-block;
-    font-size: 22px;
-    color: #fff;
-    padding: 10px 10px 10px 10px;
-
-    float: right;
-  }
-  
-  .nav > .nav-btn {
-    display: none;
-  }
-  
-  .nav > .nav-links {
-    display: inline;
-    float: left;
-    font-size: 13px;
-  }
-  
-  .nav > .nav-links > a {
-    display: inline-block;
-    padding: 13px 10px 13px 10px;
-    text-decoration: none;
-    color: #efefef;
-  }
-  
-  .nav > .nav-links > a:hover {
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-  
-  .nav > #nav-check {
-    display: none;
-  }
-
-  .dropbtn {
-    /* background-color: #04AA6D; */
-
-    background: linear-gradient(#45bdaa,transparent);
-    background-color: #005e6a; 
-    color: #efefef;
-    padding: 16px;
-    font-size: 13px;
-    border: none;
-  }
 
 
+  .SearchIcon1 {
+    margin-left: 16px;
 
-
-  
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
     position: absolute;
-    background: linear-gradient(#45bdaa,transparent);
-    background-color: #005e6a;
-    min-width: 160px;
-    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0); */
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: rgba(0, 0, 0, 0.3);}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* .dropdown:hover .dropbtn {background-color: rgba(0, 0, 0, 0.3);} */
+    margin-top: -8px;
 
-
-
-
-  /* banner Section  */
-  .mySlides {display: none}
-  img {vertical-align: middle;}
-  
-  /* Slideshow container */
-  .slideshow-container {
-    max-width: 100%;
-    position: relative;
-    margin: auto;
-  }
-  
-  /* Next & previous buttons */
- 
-  
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
   }
 
-
-  .dotDiv{
-
-    position: relative;
-    margin-top: -59px;
-    text-align: center;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-   
-  }
-  
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  /* On smaller screens, decrease text size */
-  /* @media only screen and (max-width: 600px) {
-    .prev, .next,.text {font-size: 11px}
-  } */
-
-  .banner-class {
-
-
+  .inputFiled1 {
+    padding: 10px 40px 10px 45px;
     background-color: #fff;
+    border-radius: 8px;
+    width: 100%;
+    outline-width: 0;
+    font-size: 14px;
+    border: 1px solid #efefef;
+    line-height: 1.6;
+    /* padding: 10px 20px 20px 60px; */
+  }
 
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  
-    
+
+  .prev,
+  .next,
+  .text {
+
+    font-size: 11px
+  }
+
+
+  .dotDiv {
+    display: none;
+    /* margin-top: -50px; */
   }
 
   .bannaer-text {
-      padding-bottom: 25px;
-      text-align: center;
-      color: #666;
-      font-size: 20px;
-      line-height: 30px;
-      margin: 0 auto 30px;
-      padding: 20px 0;
-      font-weight: 400;
+
+    display: none;
+  }
+
+  .bannder-imggggggg {
+
+    padding: 8px;
+    border-radius: 29px;
   }
 
 
-  
-/* card desingn  */
+  .slideshow-container {
 
-  .main{
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  h1 {
-      font-size: 24px;
-      font-weight: 400;
-      text-align: center;
-  }
-  
-  img {
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-  }
-  
-  .btn {
-    color: white;
-    padding: 10px;
-    font-size: 14px;
-    text-transform: uppercase;
-    border-radius: 24px;
-    font-weight: 400;
-    display: block;
-    /*width: 100%;
-    */cursor: pointer;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    background: #ee1c25;
-    -webkit-border-radius: 24px;
-    -moz-border-radius: 24px;
-    -ms-border-radius: 24px;
-    -o-border-radius: 24px;
-}
-  
-  .btnDiv{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-  }
-  .btn:hover {
-    background-color: #d5101a ;
-  }
-  
-  .cards {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .cards_item {
-    display: flex;
-    padding: 1rem;
-  }
-  
-  @media (min-width: 40rem) {
-    .cards_item {
-      width: 50%;
-    }
-  }
-  
-  @media (min-width: 56rem) {
-    .cards_item {
-      width: 33.3333%;
-    }
-  }
-  
-  .card {
-    background-color: white;
-    border-radius: 0.25rem;
-    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
-    display: flex;
-    /* flex-direction: column; */
-    overflow: hidden;
-  }
-  
-  .card_content {
-    padding: 18px;
-    /* background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%); */
-  }
-  
-  .card_title {
-    color: #EE1C25;
+    top: -2px;
 
-    font-size: 1.1rem;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: capitalize;
-    margin: 0px;
-    text-align: center;
-  }
-  
-  .card_text {
-    color: #ffffff;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    margin-bottom: 1.25rem;    
-    font-weight: 400;
-  }
-  .made_by{
-    font-weight: 400;
-    font-size: 13px;
-    margin-top: 35px;
-    text-align: center;
-  }
-
-
-
-  .mobile-nav{
-display: none;
-  }
-
-
-
-
-
-
-  @media (max-width:600px) {
-
-    .logoNav{
-
-      display: none;
-    }
-
-    .nav {
-
-      background-color: #45bdaa;
-
-    }
-    .nav > .nav-btn {
-      /* display: inline-block; */
-
-      display: flex;
-      align-items: center;
-      position: absolute;
-      right: 0px;
-      top: 0px;
-    }
-    .nav > .nav-btn > label {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      padding: 13px;
-    }
-    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
-      background-color: rgba(0, 0, 0, 0.3);
-    }
-    .nav > .nav-btn > label > span {
-      display: block;
-      width: 25px;
-      height: 10px;
-      border-top: 5px solid white;
-    }
-    .nav > .nav-links {
-      position: absolute;
-      display: block;
-      width: 100%;
-      background-color: #333;
-      height: 0px;
-      transition: all 0.3s ease-in;
-      overflow-y: hidden;
-      top: 50px;
-      left: 0px;
-    }
-    .nav > .nav-links > a {
-      display: block;
-      width: 100%;
-    }
-    .nav > #nav-check:not(:checked) ~ .nav-links {
-      height: 0px;
-    }
-    .nav > #nav-check:checked ~ .nav-links {
-      height: fit-content;
-      /* height: calc(100vh - 50px); */
-      overflow-y: auto;
-      z-index: 9999999;
-    }
-
-
-.nav-title{
-
-
-}
-
-
-.icon-div{
-
-  display: flex;
-}
-
-
-.mobile-nav{
-display: inline-block;
-max-width: 126px;
-margin-left: -212px;
-}
-
-    
-    
-    
-    .prev, .next,.text {font-size: 11px}
-
-
-    .dotDiv{ 
-
-      margin-top: -50px;
-    }
-
-.slideshow-container{
-
-top: 78px;
-
-  width: 100%;
+    width: 100%;
     position: relative;
     overflow: hidden;
-    background-color: #005e6a;
-}
-    .dropbtn {
-        background-color: #333!important;
-    }
+    background-color: skyblue;
   }
+
+  .dropbtn {
+    background-color: #333 !important;
+  }
+
+
+  /* Shop By Category  */
+
+  
+  .col { 
+     margin: 2% 1% 2% 1%; 
+     box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+    }
+
+	.span_1_of_8, .span_2_of_8, .span_3_of_8, .span_4_of_8, .span_5_of_8, .span_6_of_8, .span_7_of_8, .span_8_of_8 { 
+    width: 23%; 
+  }
+
+  .section-text {
+
+    text-align: center;
+    font-weight: bold;
+    font-size: small;
+    height: 60px;
+  
+  }
+
+
+}
