--- a/Osudpotro Clone/css/style.css
+++ b/Osudpotro Clone/css/style.css
@@ -605,7 +605,8 @@ a:hover {
   color: white;
   float: right;
   /* margin-right: 20px; */
-    /* position: absolute; */
+    position: absolute;
+    margin-left: 1291px;
   
 }
 
@@ -838,7 +839,7 @@ a:hover {
   .discount{
     background-color: red;
       border-radius: 50%;
-      width: 22%;
+      width: 32%;
       height: 11%;
       text-align: center;
       top: 5px;
@@ -846,6 +847,56 @@ a:hover {
       margin: 10px;
   }
 
+
+.card4{
+  display: none;
+}
+.card5{
+
+  display: none;
+}
+
+  a {
+    text-decoration: none;
+    display: inline-block;
+    
+  }
+  
+  a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .previous {
+    background-color: #04AA6D;
+    color: white;
+    margin-left: 20px;
+      position: absolute;
+  }
+  
+  .next {
+    background-color: #04AA6D;
+    color: white;
+    float: right;
+    /* margin-right: 20px; */
+      position: absolute;
+      margin-left: 309px;
+    
+  }
+  
+  .round {
+    border-radius: 50%;
+  
+    width: 23px;
+    height: 31px;
+    text-align: center;
+    font-size: 20px;
+  } 
+      .P-N-BTN{
+  
+        display: flex;
+        align-items: center;
+      }
   
 
 }
