--- a/V1/src/app/core/header/header.component.scss
+++ b/V1/src/app/core/header/header.component.scss
@@ -5,80 +5,49 @@ header{
     height: auto;
     background-color: #FFFFFF;
 }
+.header-discount{
+  text-align: center;
+
+}
+.header-discount h3{
+  font-family:$font-en-primary;
+  font-weight: bold;
+  color: #940d0f;
+  letter-spacing: 1.5px;
+  font-size: 18px;
+}
 .header-top-area{
     display: block;
     width: 100%;
     height: auto;
     box-sizing: border-box;
-    background: linear-gradient(to left, #52c234, #0cb94e);
-    padding: 7px 10px;
+    background: linear-gradient(to left, #FFE8E8, #fcdddd);
+    padding: 10px 10px;
     box-sizing: border-box;
     position: relative;
     transition: 0.3s linear;
+
 }
 .header-top-invisible{
     display: none;
 }
 .header-top-close span{
-    background-color: $color-primary;
+    // background-color: $color-primary;
     width: 25px;
     height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    color: #fff;
+    color: grey;
     font-size: 14px;
     position: absolute;
-    right: 20px;
-    top: 50%;
+    right: 15px;
+    top: 55%;
     transform: translateY(-50%);
     cursor: pointer;
 }
-.header-discount{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-}
-.header-discount h3{
-    color:#fff;
-    font-family: $font-en-primary;
-    font-style: normal;
-    font-weight: 400;
-    display: block;
-    font-size: 15px;
-    letter-spacing: 0.4px;
-    line-height: 18px;
-}
-.header-discount button{
-    color: $color-primary;
-    font-size: 13px;
-    font-weight: 500;
-    background-color: #fff;
-    outline: none;
-    padding: 0px 12px;
-    border-radius: 3px;
-    border: 1px solid transparent;
-    text-transform: uppercase;
-    font-family: $font-en-primary;
-    display: inline-block;
-    font-style: normal;
-    line-height: 24px;
-    transition: all 0.3s linear;
-}
-.header-discount button:hover{
-    background-color: $color-primary;
-    color: #fff;
-}
-@media(max-width:600px){
-    .header-discount{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 3px;
-    }
-}
+
 .header-midle{
     display: block;
     width: 100%;
@@ -293,7 +262,7 @@ header{
     color: $text-color;
     background-color: #f5f5f5;
     border-radius: 50%;
-    transition: all 0.3s linear; 
+    transition: all 0.3s linear;
     border: none;
     outline: none;
 }
@@ -433,3 +402,449 @@ header{
         display: none;
     }
 }
+
+
+
+
+
+.search-bar{
+    width: 100%;
+    padding-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    background-color: #F3F3F3;
+}
+.sb-1,.sb-2,.sb-3{
+    display: flex;
+}
+.sb-1 p{
+    padding: 0 15px;
+    font-size: 11px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+
+}
+.sb-1 p:hover{
+    color: $color-light-gray;
+    cursor: pointer;
+}.sb-2:hover{
+    color: $color-light-gray;
+    cursor: pointer;
+}
+.sb-2 p{
+  margin-top: -6px;
+    padding-right: 15px;
+    font-size: 12px;
+    font-weight: 400;
+    font-family: 'Alata', sans-serif !important;
+    font-size: 10px !important;
+    line-height: 18px !important;
+}
+.fa-shopping-bag{
+  margin-top: -4px;
+    padding:2px 8px;
+}
+
+.fa-search{
+    padding:2px 5px;
+}
+
+
+$background: white;
+
+.navbar-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 60px;
+    // overflow: hidden;
+    background-color: $heading-color;
+    // position: fixed;
+    // top: 0;
+}
+
+.navbar-container p{
+    letter-spacing: 1.5px;
+    font-size: 14px;
+    padding: 12px 16px;
+}
+
+.animation1{
+    font-weight: bold;
+    animation: nav1 1s linear infinite;
+}
+
+@keyframes nav1 {
+    0%   {color:black}
+    100%   {color:red}
+
+  }
+
+.animation2{
+    font-weight: bold;
+    animation: nav2 1s linear infinite;
+}
+
+@keyframes nav2 {
+    0%   {color:black}
+    100%   {color:yellow}
+
+  }
+
+
+
+
+
+
+
+
+// megamenu start
+nav{
+    position:relative;
+    z-index: 99;
+    width: 100%;
+    background-color: $heading-color;
+
+
+  }
+  nav .wrapper{
+    // position: relative;
+    max-width: 1300px;
+    padding: 0px 30px;
+    height: 70px;
+    line-height: 70px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .wrapper .logo a{
+    color: grey;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  .wrapper .nav-links{
+    display: inline-flex;
+  }
+  .nav-links li{
+    list-style: none;
+  }
+  .nav-links li a{
+    font-family:$font-en-primary;
+    color: grey;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 9px 15px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    letter-spacing: 0.5px;
+  }
+  // .nav-links li a:hover{
+  //   background: #3A3B3C;
+  // }
+  .nav-links .mobile-item{
+    display: none;
+  }
+  .nav-links .drop-menu{
+    position: absolute;
+    background-color: $heading-color;
+    width: 180px;
+    line-height: 45px;
+    top: 85px;
+    opacity: 0;
+    visibility: hidden;
+    box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+
+    font-size: $font-en-primary;
+    font-size: 12px;
+  }
+  .nav-links li:hover .drop-menu,
+  .nav-links li:hover .mega-box{
+    transition: all 0.4s ease;
+    top: 40px;
+    opacity: 1;
+    visibility: visible;
+  }
+  .drop-menu li a{
+
+    width: 100%;
+    display: block;
+    padding: 0 0 0 15px;
+    font-weight: 400;
+    border-radius: 0px;
+  }
+  .mega-box{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    // padding: 0 30px;
+    top: 85px;
+    opacity: 0;
+    visibility: hidden;
+    // font-size: $font-en-primary;
+    // font-size: 14px;
+  }
+  .mega-box a{
+    font-size: $font-en-primary;
+    font-size: 12px;
+  }
+  .mega-box .content{
+    background-color: $heading-color;
+    padding: 25px 20px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 10px;
+    // box-shadow: 0 6px 10px rgba(0,0,0,0.15);
+  }
+  .mega-box .content .row{
+    width: calc(25% - 30px);
+    line-height: 45px;
+    font-family: 'Alata', sans-serif;
+  }
+  .content .row img{
+    width: 90%;
+    height: 80%;
+    // object-fit: cover;
+  }
+  .content .row header{
+    color: #575757;
+    font-size: 14px;
+    font-weight: 700;
+    border-bottom: 1px solid;
+    width: 203px;
+  }
+
+
+  .content .row .mega-links{
+    margin-left: -40px;
+    font-size: 12px;
+    // border-left: 1px solid rgba(255,255,255,0.09);
+  }
+  .row .mega-links li{
+    padding: 0 20px;
+  }
+  .row .mega-links li a{
+    padding: 0px;
+    padding: 0 20px;
+    color: #575757;
+    font-size: 12px;
+    display: block;
+    font-family:$font-en-primary;
+  }
+  .row .mega-links li a:hover{
+    color: black;
+  }
+  .wrapper .btn{
+    color: grey;
+    font-size: 14px;
+    cursor: pointer;
+    display: none;
+  }
+  .wrapper .btn.close-btn{
+    position: absolute;
+    right: 30px;
+    top: 10px;
+  }
+  @media screen and (min-width: 970px) {
+    nav{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: auto;
+    }
+  }
+
+  @media screen and (max-width: 970px) {
+    .wrapper .btn{
+      display: block;
+    }
+    .wrapper .nav-links{
+      position: fixed;
+      height: 100vh;
+      width: 100%;
+      max-width: 350px;
+      top: 0;
+      left: -100%;
+      background-color: $heading-color;
+      display: block;
+      padding: 50px 10px;
+      line-height: 50px;
+      overflow-y: auto;
+      box-shadow: 0px 15px 15px rgba(0,0,0,0.18);
+      transition: all 0.3s ease;
+    }
+    /* custom scroll bar */
+    ::-webkit-scrollbar {
+      width: 10px;
+    }
+    ::-webkit-scrollbar-track {
+      background-color: $heading-color;
+    }
+    ::-webkit-scrollbar-thumb {
+      background-color: $heading-color;
+    }
+    #menu-btn:checked ~ .nav-links{
+      left: 0%;
+    }
+    #menu-btn:checked ~ .btn.menu-btn{
+      display: none;
+    }
+    #close-btn:checked ~ .btn.menu-btn{
+      display: block;
+    }
+    .nav-links li{
+      margin: 15px 10px;
+    }
+    .nav-links li a{
+      padding: 0 20px;
+      display: block;
+      font-size: 12px;
+    }
+    .nav-links .drop-menu{
+      position: static;
+      opacity: 1;
+      top: 65px;
+      visibility: visible;
+      padding-left: 20px;
+      width: 100%;
+      max-height: 0px;
+      overflow: hidden;
+      box-shadow: none;
+      transition: all 0.3s ease;
+    }
+    #showDrop:checked ~ .drop-menu,
+    #showMega:checked ~ .mega-box{
+      max-height: 100%;
+    }
+    .nav-links .desktop-item{
+      display: none;
+    }
+
+
+    .desktop-item a{
+      font-family:$font-en-primary;
+      font-size: 14px;
+      font-weight: 700;
+    }
+    .nav-links .mobile-item{
+      display: block;
+      color: #f2f2f2;
+      font-size: 14px;
+      font-weight: 500;
+      padding-left: 20px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: all 0.3s ease;
+    }
+    .nav-links .mobile-item:hover{
+      background-color: $heading-color;
+    }
+    .drop-menu li{
+      margin: 0;
+    }
+    .drop-menu li a{
+      border-radius: 5px;
+      font-size: 14px;
+    }
+    .mega-box{
+      position: static;
+      top: 65px;
+      opacity: 1;
+      visibility: visible;
+      padding: 0 20px;
+      max-height: 0px;
+      overflow: hidden;
+      transition: all 0.3s ease;
+      font-family: $font-en-primary;
+      font-size: 10px;
+    }
+    header{
+        font-size: $font-en-primary;
+        font-size: 14px;
+
+    }
+    .mega-box .content{
+      box-shadow: none;
+      flex-direction: column;
+      padding: 20px 20px 0 20px;
+    }
+    .mega-box .content .row{
+      width: 100%;
+      margin-bottom: 15px;
+      // border-top: 1px solid rgba(255,255,255,0.08);
+    }
+    .mega-box .content .row:nth-child(1),
+    .mega-box .content .row:nth-child(2){
+      border-top: 0px;
+    }
+    .content .row .mega-links{
+      border-left: 0px;
+      padding-left: 15px;
+    }
+    .row .mega-links li{
+      margin: 0;
+    }
+    .content .row header{
+      font-size: 12px;
+    }
+  }
+  nav input{
+    display: none;
+  }
+  .body-text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    padding: 0 30px;
+  }
+  .body-text div{
+    font-size: 15px;
+    font-weight: 600;
+  }
+.row{
+  font-size: 10px;
+}
+
+
+.main-logo{
+  width: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+.main-logo img{
+  width: 60px;
+  height: 60px;
+}
+
+@media only screen and (max-width: 900px) {
+  .main-logo {
+    display: none;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
