--- a/V1/src/theme/_base.scss
+++ b/V1/src/theme/_base.scss
@@ -48,16 +48,17 @@ img{
     display: block;
     max-width: $container-max-width;
     width: 100%;
-    margin: auto;
+    // margin: auto;
 }
 @media(max-width:1400px){
     .container{
-        max-width: 1180px;
+        max-width: 1980px;
+
     }
 }
 @media(max-width:1200px){
     .container{
-        max-width: 960px;
+        // max-width: 960px;
     }
 }
 @media(max-width:990px){
