--- a/V1/src/theme/_swipper.scss
+++ b/V1/src/theme/_swipper.scss
@@ -37,8 +37,8 @@
     z-index: 660;
     border-radius: 50%;
     transition: all 0.3s linear;
-    visibility:hidden;
-    opacity: 0;
+    // visibility:hidden;
+    // opacity: 0;
     box-shadow:  0px 15px 35px 0px rgba(0, 0, 0, 0.1);
     text-shadow: 2px 3px 8px rgba(0, 0, 0, 0.1);
   }
@@ -54,7 +54,7 @@
   .mySwiper:hover ::ng-deep.swiper-button-next,.mySwiper:hover ::ng-deep.swiper-button-prev{
     visibility: visible;
     opacity: 1;
-  } 
+  }
   ::ng-deep.swiper-button-next:after,
   ::ng-deep.swiper-button-prev:after{
     content: "\f061";
@@ -74,8 +74,8 @@
   }
   ::ng-deep.swiper-button-next.swiper-button-disabled,::ng-deep.swiper-button-prev.swiper-button-disabled{
     z-index: 20;
-    visibility: hidden!important;
-    opacity: 0!important;
+    // visibility: hidden!important;
+    // opacity: 0!important;
     transition: all 0.3s linear;
   }
 ::ng-deep.small-carousel .mySwiper {
