--- a/V1/src/styles.scss
+++ b/V1/src/styles.scss
@@ -12,6 +12,7 @@
     width: 88%;
     margin: auto;
     background: rgb(14, 13, 13);
+    font-family: 'Alata', sans-serif;
   }
 
 body .slick-prev,
@@ -20,10 +21,12 @@ body .slick-next {
     width: 40px;
     background: grey !important;
     z-index: 100;
+    font-family: 'Alata', sans-serif;
 }
 ::selection{
   color: #fff;
   background-color: $color-primary;
+  font-family: 'Alata', sans-serif;
 }
 
 body {
